# catify

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  install.sh  readme.md
include/: catify.hpp  constants.hpp  filesys.hpp  random.hpp  sanitization.hpp
src/: catify.cpp
